fix swagger bank API
